Finished basic data cleaning and merging features